# chroma

./: .gitignore  CMakeLists.txt
src/: BMPHeaders.h  colorModifiers.h  main.cpp
